--- a/index.html
+++ b/index.html
@@ -2,13 +2,54 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" href="css/style.css"/>
+  <script src="main.js" defer></script>
+  <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
   <title>Le Japon</title>
 
 
 </head>
 <body>
+
+  <style>
+    html,
+    body {
+      position: relative;
+      height: 100%;
+    }
+
+    body {
+      background: #eee;
+      font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+      font-size: 14px;
+      color: #000;
+      margin: 0;
+      padding: 0;
+    }
+
+    .swiper {
+      width: 100%;
+      height: 100%;
+    }
+
+    .swiper-slide {
+      text-align: center;
+      font-size: 18px;
+      background: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .swiper-slide img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  </style>
+ <!-- 
   <div class="video-wrapper">
     <video autoplay muted loop>
       <source src="video/Japon.mp4" type="video/mp4" />
@@ -26,5 +67,154 @@
         </div>
     </div>
   </div>
+  
+   
+  
+  <div class="img-container1">
+    <img src="img/kimono.jpg" alt="image de femme en kimono">
+    <div class="img-overlay">
+        <h1>Terre de contrastes</h1>
+        <div class="subtitle">
+            <div class="culture">Culture</div>
+        </div>
+    </div>
+  </div>
+  <div class="img-container2">
+    <img src="img/sushi.jpg" alt="image de sushi">
+    <div class="img-overlay">
+        <h1>Terre de contrastes</h1>
+        <div class="subtitle">
+            <div class="gastronomie">Gastronomie</div>
+        </div>
+    </div>
+  </div>
+  <div class="img-container3">
+    <img src="img/fuji.jpg" alt="image du mont fuji">
+    <div class="img-overlay">
+        <h1>Terre de contrastes</h1>
+        <div class="subtitle">
+            <div class="aventure">Aventure</div>
+        </div>
+    </div>
+  </div>
+  <div class="img-container4">
+    <img src="img/singe.jpg" alt="image de singe des neiges">
+    <div class="img-overlay">
+        <h1>Terre de contrastes</h1>
+        <div class="subtitle">
+            <div class="biodiversite">Biodiversité</div>
+        </div>
+    </div>
+  </div>
+  <div class="img-container5">
+    <img src="img/ceremonie.jpg" alt="image de cérémonie du thé">
+    <div class="img-overlay">
+        <h1>Terre de contrastes</h1>
+        <div class="subtitle">
+            <div class="traditions">Traditions</div>
+        </div>
+    </div>
+  </div>
+  <div class="img-container6">
+    <img src="img/mariokart.jpg" alt="image de kart Mario roulant sur Shibuya crossing">
+    <div class="img-overlay">
+        <h1>Terre de contrastes</h1>
+        <div class="subtitle">
+            <div class="insolite">Insolite</div>
+        </div>
+    </div>
+  </div>
+  
+  -->
+  
+  <!-- Swiper -->
+  <div class="swiper mySwiper">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide">
+        <img src="img/paysage.jpg" alt="image de paysage japonais">
+        <div class="img-overlay">
+            <h1>Terre de contrastes</h1>
+            <div class="subtitle">
+                <div class="japon"></div>
+            </div>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <img src="img/kimono.jpeg" alt="image de femme en kimono">
+        <div class="img-overlay">
+            <h1>Terre de contrastes</h1>
+            <div class="subtitle">
+                <div class="culture">Culture</div>
+            </div>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <img src="img/gastronomie.webp" alt="image de sushi">
+        <div class="img-overlay">
+            <h1>Terre de contrastes</h1>
+            <div class="subtitle">
+                <div class="gastronomie">Gastronomie</div>
+            </div>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <img src="img/fuji.jpg" alt="image du mont fuji">
+        <div class="img-overlay">
+            <h1>Terre de contrastes</h1>
+            <div class="subtitle">
+                <div class="aventure">Aventure</div>
+            </div>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <img src="img/singe.png" alt="image de singe des neiges">
+        <div class="img-overlay">
+            <h1>Terre de contrastes</h1>
+            <div class="subtitle">
+                <div class="biodiversite">Biodiversité</div>
+            </div>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <img src="img/ceremonie.jpg" alt="image de cérémonie du thé">
+        <div class="img-overlay">
+            <h1>Terre de contrastes</h1>
+            <div class="subtitle">
+                <div class="traditions">Traditions</div>
+            </div>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <img src="img/insolite.jpg" alt="image de onsen ">
+        <div class="img-overlay">
+            <h1>Terre de contrastes</h1>
+            <div class="subtitle">
+                <div class="insolite">Insolite</div>
+            </div>
+        </div>
+      </div>
+      
+    
+    </div>
+      <div class="swiper-pagination"></div>
+  </div>
+  <!-- Swiper JS -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+  <!-- Initialize Swiper -->
+  <script>
+    var swiper = new Swiper(".mySwiper", {
+      direction: "vertical",
+      slidesPerView: 1,
+      spaceBetween: 30,
+      mousewheel: true,
+      pagination: {
+        el: ".swiper-pagination",
+        clickable: true,
+      },
+    });
+  </script>
+  
+  
 </body>
 </html>
