--- a/index.html
+++ b/index.html
@@ -13,25 +13,51 @@
 <body>
 
  <!-- 
-  <div class="video-wrapper">
-    <video autoplay muted loop>
-      <source src="video/Japon.mp4" type="video/mp4" />
-    </video>
-    <div class="overlay">
-        <h1>Terre de contrastes</h1>
-        <div class="slide-rotate-effect">
-            <div class="slide-subtitle">Culture</div>
-            <div class="slide-subtitle">Gastronomie</div>
-            <div class="slide-subtitle">Aventure</div>
-            <div class="slide-subtitle">Biodiversité</div>
-            <div class="slide-subtitle">Traditions</div>
-            <div class="slide-subtitle">Insolite</div>
-            <div class="slide-subtitle">Culture</div>
+ 
+--> 
+<header>
+  <div class="header-container">
+    <div class="menu">
+      <div class="dropdown">
+        <input type="checkbox" id="cat1">
+        <label for="cat1">Explorez</label>
+        <div class="dropdown-content">
+          <a href="#">Culture</a>
+          <a href="#">Gastronomie</a>
+          <a href="#">Aventure</a>
+          <a href="#">Biodiversité</a>
+          <a href="#">Traditions</a>
+          <a href="#">Insolite</a>
         </div>
+      </div>
+    </div>
+
+    <div class="logo">
+      <img src="img/logo3.png" alt="logo geisha">
+      <h3>Le Japon</h3>
+    </div>
+
+    <div class="menu">
+      <div class="dropdown">
+        <input type="checkbox" id="cat2">
+        <label for="cat2">Planifiez</label>
+        <div class="dropdown-content">
+          <a href="#">Destinations</a>
+          <a href="#">Hébergement</a>
+          <a href="#">Restauration</a>
+          <a href="#">Activités</a>
+          <a href="#">Déplacements</a>
+          <a href="#">Conseils aux voyageurs</a>
+        </div>
+      </div>
     </div>
   </div>
-  
---> 
+</header>
+
+
+
+
+
   <!-- Swiper -->
   <div class="swiper mySwiper">
     <div class="swiper-wrapper">
@@ -59,6 +85,7 @@
             <div class="subtitle">
                 <div class="culture">Culture</div>
             </div>
+            <button class="btn">Découvrir</button>
         </div>
       </div>
       <div class="swiper-slide">
@@ -68,6 +95,7 @@
             <div class="subtitle">
                 <div class="gastronomie">Gastronomie</div>
             </div>
+            <button class="btn">Découvrir</button>
         </div>
       </div>
       <div class="swiper-slide">
@@ -77,6 +105,7 @@
             <div class="subtitle">
                 <div class="aventure">Aventure</div>
             </div>
+            <button class="btn">Découvrir</button>
         </div>
       </div>
       <div class="swiper-slide">
@@ -86,6 +115,7 @@
             <div class="subtitle">
                 <div class="biodiversite">Biodiversité</div>
             </div>
+            <button class="btn">Découvrir</button>
         </div>
       </div>
       <div class="swiper-slide">
@@ -95,6 +125,7 @@
             <div class="subtitle">
                 <div class="traditions">Traditions</div>
             </div>
+            <button class="btn">Découvrir</button>
         </div>
       </div>
       <div class="swiper-slide">
@@ -104,6 +135,7 @@
             <div class="subtitle">
                 <div class="insolite">Insolite</div>
             </div>
+            <button class="btn">Découvrir</button>
         </div>
       </div>
       
