--- a/index.html
+++ b/index.html
@@ -275,6 +275,12 @@
 						<h3 class="slider-subtitle">Des paysages à couper le souffle</h3>
 					</div>
 				</div>
+				<div class="swiper-slide">
+					<footer>
+						<div style="width: 1920px; height: 800px; background-color: red;"></div>
+						<div style="width: 1920px;height: 200px; background-color: black;"></div>
+					</footer>
+				</div>
 				<div class="swiper-pagination"></div>
 			</div>
 		</div>		
