Adding the footer inside the index.html file

--- a/footer.html
+++ b/footer.html
@@ -43,7 +43,7 @@
                         <ul>
                             <li>
                                 <a href="https://www.instagram.com/" target="_blank">
-                                    <div class="btn btn-instagram">
+                                    <div class="footer-btn btn-instagram">
                                         <div class="logo">
                                             <i class="fab fa-instagram-square"></i>
                                         </div>
@@ -53,10 +53,10 @@
                                     </div>
                                 </a>
                             </li>
-                        
+
                             <li>
                                 <a href="https://www.youtube.com/" target="_blank">
-                                    <div class="btn btn-youtube">
+                                    <div class="footer-btn btn-youtube">
                                         <div class="logo">
                                             <i class="fab fa-youtube"></i>
                                         </div>
@@ -69,7 +69,7 @@
 
                             <li>
                                 <a href="https://www.facebook.com/" target="_blank">
-                                    <div class="btn btn-facebook">
+                                    <div class="footer-btn btn-facebook">
                                         <div class="logo">
                                             <i class="fab fa-facebook"></i>
                                         </div>
