--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<link rel="stylesheet" href="css/style.css"/>
+		<link rel="stylesheet" href="css/footer.css"/>
 		<script src="main.js" defer></script>
 		<link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 		<title>Le Japon</title>
@@ -277,8 +278,81 @@
 				</div>
 				<div class="swiper-slide">
 					<footer>
-						<div style="width: 1920px; height: 800px; background-color: red;"></div>
-						<div style="width: 1920px;height: 200px; background-color: black;"></div>
+						<section>
+							<div class="footer-top">
+								<div class="footer-top-content">
+									<h1>Partez au pays du soleil levant</h1>
+									<p>Partez à la découverte du Japon, un pays où traditions millénaires et technologies futuristes cohabitent harmonieusement. Des temples paisibles de Kyoto aux rues vibrantes de Tokyo, chaque coin du Japon vous émerveille. Laissez-vous séduire par sa culture unique, sa gastronomie raffinée et ses paysages à couper le souffle.</p>
+								</div>
+							</div>
+						</section>
+						<section>
+							<div class="footer-bottom">
+								<div class="footer-column logo">
+									<img src="img/logo3invert.png" alt="Logo">
+								</div>
+								<div class="footer-column">
+									<h3>Visiter</h3>
+									<ul>
+										<li><a href="#">A savoir avant le départ</a></li>
+										<li><a href="#">Conseils pour vos vacances</a></li>
+										<li><a href="#">Questions/réponses</a></li>
+									</ul>
+								</div>
+								<div class="footer-column">
+									<h3>A propos de nous</h3>
+									<ul>
+										<li><a href="#">Qui sommes-nous ?</a></li>
+										<li><a href="#">Contactez-nous</a></li>
+										<li><a href="#">S'inscrire à la newsletter</a></li>
+									</ul>
+								</div>
+								<div class="footer-column">
+									<div class="social-buttons">
+										<ul>
+											<li>
+												<a href="https://www.instagram.com/" target="_blank">
+													<div class="footer-btn btn-instagram">
+														<div class="social-media-logo">
+															<i class="fab fa-instagram-square"></i>
+														</div>
+														<div class="text">
+															<span>Instagram</span>
+														</div>
+													</div>
+												</a>
+											</li>
+
+											<li>
+												<a href="https://www.youtube.com/" target="_blank">
+													<div class="footer-btn btn-youtube">
+														<div class="social-media-logo">
+															<i class="fab fa-youtube"></i>
+														</div>
+														<div class="text">
+															<span>Youtube</span>
+														</div>
+													</div>
+												</a>
+											</li>
+
+											<li>
+												<a href="https://www.facebook.com/" target="_blank">
+													<div class="footer-btn btn-facebook">
+														<div class="social-media-logo">
+															<i class="fab fa-facebook"></i>
+														</div>
+														<div class="text">
+															<span>Facebook</span>
+														</div>
+													</div>
+												</a>
+											</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</section>
 					</footer>
 				</div>
 				<div class="swiper-pagination"></div>
@@ -291,5 +365,6 @@
 		<!-- Initialize Swiper -->
 		<script src="js/main-swiper.js"></script>
 		<script src="js/horizontal-swiper.js"></script>
+		<script src="https://kit.fontawesome.com/0c87a70838.js"></script>
 	</body>
 </html>
