--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					</div>
 				</div>
 				<div class="logo">
-					<img src="img/logo3.png" alt="logo geisha">
+					<img src="img/logo3invert.png" alt="logo geisha">
 					<h3>Le Japon</h3>
 				</div>
 				<div class="menu">
@@ -177,7 +177,7 @@
 					</div>
 				</div>
 				<div class="swiper-slide">
-					<img src="img/insolite.jpg" alt="image de onsen ">
+					<img src="img/insolite.jpeg" alt="image de onsen ">
 					<div class="img-overlay">
 						<h1>Dépaysant</h1>
 						<div class="subtitle">
