Changed the active pagination design and updating the gitignore file.

--- a/index.html
+++ b/index.html
@@ -356,8 +356,17 @@
 					</footer>
 				</div>
 				<div class="swiper-pagination"></div>
+				<img id="cherryflower-icon" src="img/iconecerisiersansbg.png">
+				<img id="culture-icon" src="img/iconeculturesansbg.png">
+				<img id="gastronomie-icon" src="img/iconegastronomiesansbg.png">
+				<img id="aventure-icon" src="img/iconeaventuresansbg.png">
+				<img id="biodiversite-icon" src="img/iconebiodiversitecarpesansbg.png">
+				<img id="tradition-icon" src="img/iconetraditionssansbg.png">
+				<img id="insolite-icon" src="img/iconeinsolitesansbg.png">
+				<img id="cherryflower2-icon" src="img/iconecerisiersansbg.png">
 			</div>
-		</div>		
+		</div>
+		<script src="js/pagination.js"></script>
 		<script src="js/video-slider.js"></script>
 		<script src="js/circle-button.js"></script>
 		<!-- Swiper JS -->
