--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					</div>  
 				</div>    
 				<div class="swiper-slide">
-					<img src="img/kimono2.jpg" alt="image de femme en kimono">
+					<img src="img/slides/kimono2.jpg" alt="image de femme en kimono">
 					<div class="img-overlay">
 						<h1>Dépaysant</h1>
 						<div class="subtitle">
@@ -89,7 +89,7 @@
 						</div>
 				</div>
 				<div class="swiper-slide">
-					<img src="img/gastronomie.webp" alt="image de sushi">
+					<img src="img/slides/gastronomie.webp" alt="image de sushi">
 					<div class="img-overlay">
 						<h1>Dépaysant</h1>
 						<div class="subtitle">
@@ -111,7 +111,7 @@
 					</div>
 				</div>
 				<div class="swiper-slide">
-					<img src="img/fuji.jpg" alt="image du mont fuji">
+					<img src="img/slides/fuji.jpg" alt="image du mont fuji">
 					<div class="img-overlay">
 						<h1>Dépaysant</h1>
 						<div class="subtitle">
@@ -133,7 +133,7 @@
 					</div>
 				</div>
 				<div class="swiper-slide">
-					<img src="img/singe.png" alt="image de singe des neiges">
+					<img src="img/slides/singe.png" alt="image de singe des neiges">
 					<div class="img-overlay">
 						<h1>Dépaysant</h1>
 						<div class="subtitle">
@@ -155,7 +155,7 @@
 					</div>
 				</div>
 				<div class="swiper-slide">
-					<img src="img/ceremonie.jpg" alt="image de cérémonie du thé">
+					<img src="img/slides/ceremonie.jpg" alt="image de cérémonie du thé">
 					<div class="img-overlay">
 						<h1>Dépaysant</h1>
 						<div class="subtitle">
@@ -177,7 +177,7 @@
 					</div>
 				</div>
 				<div class="swiper-slide">
-					<img src="img/insolite.jpeg" alt="image de onsen ">
+					<img src="img/slides/insolite.jpeg" alt="image de onsen ">
 					<div class="img-overlay">
 						<h1>Dépaysant</h1>
 						<div class="subtitle">
@@ -356,14 +356,14 @@
 					</footer>
 				</div>
 				<div class="swiper-pagination"></div>
-				<img id="cherryflower-icon" src="img/iconecerisiersansbg.png">
-				<img id="culture-icon" src="img/iconeculturesansbg.png">
-				<img id="gastronomie-icon" src="img/iconegastronomiesansbg.png">
-				<img id="aventure-icon" src="img/iconeaventuresansbg.png">
-				<img id="biodiversite-icon" src="img/iconebiodiversitecarpesansbg.png">
-				<img id="tradition-icon" src="img/iconetraditionssansbg.png">
-				<img id="insolite-icon" src="img/iconeinsolitesansbg.png">
-				<img id="cherryflower2-icon" src="img/iconecerisiersansbg.png">
+				<img id="cherryflower-icon" src="img/icons/iconecerisiersansbg.png">
+				<img id="culture-icon" src="img/icons/iconeculturesansbg.png">
+				<img id="gastronomie-icon" src="img/icons/iconegastronomiesansbg.png">
+				<img id="aventure-icon" src="img/icons/iconeaventuresansbg.png">
+				<img id="biodiversite-icon" src="img/icons/iconebiodiversitecarpesansbg.png">
+				<img id="tradition-icon" src="img/icons/iconetraditionssansbg.png">
+				<img id="insolite-icon" src="img/icons/iconeinsolitesansbg.png">
+				<img id="cherryflower2-icon" src="img/icons/iconecerisiersansbg.png">
 			</div>
 		</div>
 		<script src="js/pagination.js"></script>
