--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<link rel="stylesheet" href="css/style.css"/>
-		<link rel="stylesheet" href="css/footer.css"/>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/footer.css">
 		<script src="main.js" defer></script>
-		<link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
 		<title>Le Japon</title>
 	</head>
 	<body>
@@ -51,7 +51,7 @@
 			<div class="swiper-wrapper">
 				<div class="swiper-slide">
 					<video class="video-slide" autoplay muted loop playsinline>
-						<source src="video/Japon.mp4" type="video/mp4"/>
+						<source src="video/Japon.mp4" type="video/mp4">
 					</video>     
 					<div class="overlay">
 						<h1>Dépaysant</h1>
@@ -356,24 +356,24 @@
 					</footer>
 				</div>
 				<div class="swiper-pagination"></div>
-				<img id="cherryflower-icon" src="img/icons/iconecerisiersansbg.png">
-				<img id="culture-icon" src="img/icons/iconeculturesansbg.png">
-				<img id="gastronomie-icon" src="img/icons/iconegastronomiesansbg.png">
-				<img id="aventure-icon" src="img/icons/iconeaventuresansbg.png">
-				<img id="biodiversite-icon" src="img/icons/iconebiodiversitecarpesansbg.png">
-				<img id="tradition-icon" src="img/icons/iconetraditionssansbg.png">
-				<img id="insolite-icon" src="img/icons/iconeinsolitesansbg.png">
-				<img id="cherryflower2-icon" src="img/icons/iconecerisiersansbg.png">
+				<img id="cherryflower-icon" src="img/icons/iconecerisiersansbg.png" alt="icone de fleur de cerisier">
+				<img id="culture-icon" src="img/icons/iconeculturesansbg.png" alt="icone d'une geisha">
+				<img id="gastronomie-icon" src="img/icons/iconegastronomiesansbg.png" alt="icone d'un bol de ramen">
+				<img id="aventure-icon" src="img/icons/iconeaventuresansbg.png" alt="icone d'un randomneur devant le mont fuji">
+				<img id="biodiversite-icon" src="img/icons/iconebiodiversitecarpesansbg.png" alt ="icone d'un duo de carpe">
+				<img id="tradition-icon" src="img/icons/iconetraditionssansbg.png" alt="icone d'un éventail">
+				<img id="insolite-icon" src="img/icons/iconeinsolitesansbg.png" alt="icone d'un chat">
+				<img id="cherryflower2-icon" src="img/icons/iconecerisiersansbg.png" alt="icone de fleur de cerisier">
 			</div>
 		</div>
-		<script src="js/pagination.js"></script>
-		<script src="js/video-slider.js"></script>
-		<script src="js/circle-button.js"></script>
 		<!-- Swiper JS -->
 		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 		<!-- Initialize Swiper -->
 		<script src="js/main-swiper.js"></script>
 		<script src="js/horizontal-swiper.js"></script>
+		<script src="js/pagination.js"></script>
+		<script src="js/video-slider.js"></script>
+		<script src="js/circle-button.js"></script>
 		<script src="https://kit.fontawesome.com/0c87a70838.js"></script>
 	</body>
 </html>
